--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,8 @@
 
 
 	<%= render "main/pagina1"%>
-	<%= render "main/resultados"%>
+
+	<%= if params[:nombre] !=nil 
+	 render "main/resultados" 
+	 end%>
 
