--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -14,6 +14,10 @@
 .bak4{
     background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
 }
+.bak6{
+
+background: #7218bd;
+}
 .register-left{
     text-align: center;
     color: #fff;
@@ -43,6 +47,22 @@
     -webkit-animation: mover 2s infinite  alternate;
     animation: mover 1s infinite  alternate;
 }
+
+.resultados{
+
+    font-weight: bold;
+    color:#FFFFFF;
+
+}
+
+.resultados img{
+    margin-top: 15%;
+    margin-bottom: 5%;
+    width: 25%;
+    -webkit-animation: mover 2s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+}
+
 @-webkit-keyframes mover {
     0% { transform: translateY(0); }
     100% { transform: translateY(-20px); }
