--- a/app/views/main/_pagina1.html.erb
+++ b/app/views/main/_pagina1.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @usuario, local: true)  do |form|%> 
+<%= form_with(model: @usuario)  do |form|%> 
         <div class="container-fluid bak2", style="padding-top: 10%;"> 
             <section id="one" style="height:100vh;">
                 <div class="register">
