--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -41,7 +41,7 @@ background: #7218bd;
     border-bottom-left-radius: 10% 50%;
 }
 .register-left img{
-    margin-top: 15%;
+    margin-top: 15vh;
     margin-bottom: 5%;
     width: 25%;
     -webkit-animation: mover 2s infinite  alternate;
@@ -124,4 +124,135 @@ background: #7218bd;
     margin-top: 8%;
     margin-bottom: -15%;
     color: #495057;
+}
+
+@media only screen and (max-width: 600px) {
+.register{
+    
+    
+}
+.bak1{
+    background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%);
+}
+.bak2{
+    background: linear-gradient(90deg, #3F2B96 0%, #A8C0FF 100%);
+}
+.bak3{
+    background: linear-gradient(90deg, #fcff9e 0%, #c67700 100%);
+}
+.bak4{
+    background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
+}
+.bak6{
+
+background: #7218bd;
+}
+.register-left{
+    text-align: center;
+    color: #fff;
+    margin-top: auto;
+}
+.register-left input{
+    border: none;
+    border-radius: 1.5rem;
+    padding: 2%;
+    width: 60%;
+    background: #f8f9fa;
+    font-weight: bold;
+    color: #383d41;
+    margin-top: 30%;
+    margin-bottom: 3%;
+    cursor: pointer;
+}
+.register-right{
+    background: #f8f9fa;
+    border-top-left-radius: 10% 50%;
+    border-bottom-left-radius: 10% 50%;
+}
+.register-left img{
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 25%;
+    -webkit-animation: mover 2s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+}
+
+.resultados{
+
+    font-weight: bold;
+    color:#FFFFFF;
+
+}
+
+.resultados img{
+    margin-top: 15%;
+    margin-bottom: 5%;
+    width: 25%;
+    -webkit-animation: mover 2s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+}
+
+@-webkit-keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-20px); }
+}
+@keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-20px); }
+}
+.register-left p{
+    font-weight: lighter;
+    padding: auto;
+    margin-top: -9%;
+}
+.register .register-form{
+    padding: 10%;
+    margin-top: 10%;
+}
+.btnRegister{
+    float: right;
+    margin-top: 10%;
+    border: none;
+    border-radius: 1.5rem;
+    padding: 2%;
+    background: #0062cc;
+    color: #fff;
+    font-weight: 600;
+    width: auto;
+    cursor: pointer;
+     text-decoration: none;
+}
+.register .nav-tabs{
+    margin-top: 3%;
+    border: none;
+    background: #0062cc;
+    border-radius: 1.5rem;
+    width: 28%;
+    float: right;
+}
+.register .nav-tabs .nav-link{
+    padding: 2%;
+    height: auto;
+    font-weight: 600;
+    color: #fff;
+    border-top-right-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+}
+.register .nav-tabs .nav-link:hover{
+    border: none;
+}
+.register .nav-tabs .nav-link.active{
+    width: auto;
+    color: #0062cc;
+    border: 2px solid #0062cc;
+    border-top-left-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
+}
+.register-heading{
+    text-align: center;
+    margin-top: 8%;
+    margin-bottom: -15%;
+    color: #495057;
+}
+
 }
